# composable-conv-agents

./: .gitignore  CMakeLists.txt  README.md  RESEARCH_INSTRUCTIONS.md  automated_test.py  automated_test_suite.json  generate_test_audio.py  inspect_onnx.py  main.cpp
asr/: whisper_stream.cpp  whisper_stream.h
audio/: mic_stream.cpp  mic_stream.h  silero_vad.cpp  silero_vad.h  vad.cpp  vad.h
controller/: dialogue_controller.cpp  dialogue_controller.h
dashboard/: app.py
dashboard/static/: index.html
libs/onnxruntime-win-x64-1.19.0/: CodeSignSummary-a4f8db35-a1a1-48d9-ac5b-cac9549aeb89.md  GIT_COMMIT_ID
llm/: llama_stream.cpp  llama_stream.h
persona/: persona_state.cpp  persona_state.h
scripts/: download_onnx.ps1  download_voice_model.ps1  fix_and_verify.ps1  verify_setup.ps1
tts/: simple_tts.cpp  simple_tts.h  tts_stream.cpp  tts_stream.h
utils/: perf_monitor.cpp  perf_monitor.h
